--- a/application/public/manifest.json
+++ b/application/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "MPBA",
-  "name": "Math Plot Builder minimalistic app",
+  "name": "Mat Plot Builder minimalistic app",
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#000000",
