--- a/.github/workflows/services-pr-checker.yml
+++ b/.github/workflows/services-pr-checker.yml
@@ -6,7 +6,7 @@ on:
       - edited
       - reopened
     branches:
-      - "services/**"
+      - "master"
 jobs:
   review-standards:
     runs-on: ubuntu-latest
