add filter to check services only when services are altered

--- a/.github/workflows/services-pr-checker.yml
+++ b/.github/workflows/services-pr-checker.yml
@@ -8,6 +8,8 @@ on:
       - synchronize
     branches:
       - "master"
+    paths:
+      - services/**
 jobs:
   review-service-standards:
     runs-on: ubuntu-latest
