Fix workflow triggering on pr sync (#40)
Add the missing type on PR to make sure workflows re-trigger when a PR is updated.

--- a/.github/workflows/services-pr-checker.yml
+++ b/.github/workflows/services-pr-checker.yml
@@ -5,8 +5,11 @@ on:
       - opened
       - edited
       - reopened
+      - synchronize
     branches:
       - "master"
+    paths:
+      - services/**
 jobs:
   review-service-standards:
     runs-on: ubuntu-latest
