--- a/.github/workflows/pr-checker.yml
+++ b/.github/workflows/pr-checker.yml
@@ -1,4 +1,4 @@
-name: services-pr-checker
+name: pr-checker
 on:
   pull_request:
     types:
@@ -8,11 +8,29 @@ on:
       - synchronize
     branches:
       - "master"
-    paths:
-      - services/**
 jobs:
+  check-changes:
+    runs-on: ubuntu-latest
+    outputs:
+      reviewer: ${{ steps.filter.outputs.SELECTION }}
+    steps:
+      - uses: actions/checkout@v3
+      - id: filter
+        run: |
+          SELECTION="none"
+          if [[ $(git diff --name-only HEAD~1 | grep "services/" | wc -l) > 0 ]]; then
+              SELECTION="services"
+          fi
+          if [[ $(git diff --name-only HEAD~1 | grep "application/" | wc -l) > 0 ]]; then
+              SELECTION="application"
+          fi
+          echo "Got selection $SELECTION"
+          echo "SELECTION=$SELECTION" >> $GITHUB_ENV
+        shell: bash
   review-service-standards:
     runs-on: ubuntu-latest
+    needs: check-changes
+    if: needs.check-changes.outputs.reviewer == 'services'
     steps:
       - uses: actions/checkout@v3
       - name: Set up Python 3.10
